# MLOps-Projects

./: .gitignore  API.md  CONTRIBUTING.md  DATABRICKS_ARCHITECTURE_COMPARISON.md  DATABRICKS_DEPENDENCIES.md  DATABRICKS_INTEGRATION.md  DATABRICKS_INTEGRATION_INDEX.md  DATABRICKS_PACKAGE_SUMMARY.md  DATABRICKS_QUICKSTART.md  DEPLOYMENT.md  README.md  SETUP.md  kubeflow_pipeline.py  requirements.txt
stock-market-mlops/: .dockerignore  .env.example  .flake8  Dockerfile  Makefile  PIPELINE_DEMO.md  README.md  docker-compose.override.yml  docker-compose.yml  dvc.yaml  pyproject.toml  pytest.ini  startup.sh
stock-market-mlops/.github/workflows/: main.yml  pipeline.yml
stock-market-mlops/Databricks/: data_ingestion.ipynb  feature_engineering.ipynb  model_training.ipynb  serving_demo.ipynb
stock-market-mlops/data/: .gitignore  AAPL_stock_data.csv  AAPL_stock_data.csv.dvc  MSFT_stock_data.csv  MSFT_stock_data.csv.dvc  TSLA_stock_data.csv  TSLA_stock_data.csv.dvc
stock-market-mlops/helm/mlflow/: Chart.yaml  values.yaml
stock-market-mlops/models/: model.pkl
stock-market-mlops/notebooks/: 01_data_migration.py  02_feature_engineering.py  03_model_training.py
stock-market-mlops/schemas/: drift_alert.json  stock_features.json  stock_raw.json
stock-market-mlops/src/: __init__.py  config.py  data_ingestion.py  databricks_utils.py  drift_monitor.py  feature_engineering.py  kafka_feature_engineering.py  kafka_producer.py  prediction_consumer.py  train_model.py  twelvedata_producer.py
stock-market-mlops/src/Monitoring/: drift_monitor.py
stock-market-mlops/src/Orchestration/: retraining_orchestrator.py
stock-market-mlops/src/Serving/: api.py
stock-market-mlops/src/data_validation/: validate_stock_data.py
stock-market-mlops/src/orchestration/: __init__.py  retraining_orchestrator.py
stock-market-mlops/src/training/: evaluate_model.py  model_metrics.py  promote_model.py  train_model.py
stock-market-mlops/tests/: tes_model_metric.py  test_api.py  test_config.py  test_drift_monitor.py  test_retraining_orchestrator.py
(+2 files in other folders)
